# personal-pmot

./: .dockerignore  .env  .gitattributes  .gitignore  README.md  fly.toml  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
api/: auth.py  database.py  main.py  models.py  payments.py  pmot.db  requirements.txt  schemas.py
backend/: pyproject.toml
backend/app/: crud.py  models.py
frontend/: package-lock.json  package.json
src/: App.tsx  main.tsx
src/components/: Layout.tsx  Modal.tsx  StoryCard.tsx  StoryForm.tsx
src/components/auth/: GoogleSignInButton.tsx  LoginForm.tsx  RegisterForm.tsx
src/components/premium/: PremiumUpgrade.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useStories.ts
src/pages/: AuthPage.tsx  MainApp.tsx
src/types/: index.ts
