[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yaay Nands", email = "16502598+nandhinianandj@users.noreply.github.com" }
]
dependencies = [
    "uvicorn>=0.30.5",
    "fastapi>=0.112.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "passlib>=1.7.4",
    "tenacity>=9.0.0",
    "pydantic>=2.8.2",
    "emails>=0.6",
    "gunicorn>=22.0.0",
    "jinja2>=3.1.4",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "psycopg>=3.2.1",
    "sqlmodel>=0.0.21",
    "bcrypt>=4.2.0",
    "pydantic-settings>=2.4.0",
    "sentry-sdk>=2.12.0",
    "pyjwt>=2.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
